--- a/screenmatch/pom.xml
+++ b/screenmatch/pom.xml
@@ -41,11 +41,19 @@
 			<scope>test</scope>
 		</dependency>
 
+
+
 		<!-- AGREGADO POR MI DE MVN -->
+
 		<dependency>
 			<groupId>com.fasterxml.jackson.core</groupId>
 			<artifactId>jackson-databind</artifactId>
 			<version>2.18.0</version>
+		</dependency>
+		<dependency>
+			<groupId>com.fasterxml.jackson.core</groupId>
+			<artifactId>jackson-databind</artifactId>
+			<version>2.14.2</version>
 		</dependency>
 
 	</dependencies>
