--- a/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/src/main/resources/application.properties
+++ b/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/src/main/resources/application.properties
@@ -1,1 +1,15 @@
+spring.datasource.url=jdbc:postgresql://localhost/alura_series
+spring.datasource.username=postgres
+spring.datasource.password=
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
+/*
+
+
+*/
