--- a/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/src/main/resources/application.properties
+++ b/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.datasource.url=jdbc:postgresql://localhost/alura_series
 spring.datasource.username=postgres
-spring.datasource.password=
+spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
 hibernate.dialect=org.hibernate.dialect.HSQLDialect
 
