--- a/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/pom.xml
+++ b/2066-java-persitencia-de-datos-y-consultas-con-Spring-JPA-proyecto-inicial/pom.xml
@@ -22,6 +22,13 @@
 			<artifactId>spring-boot-starter</artifactId>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-web</artifactId>
+		</dependency>
+
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-test</artifactId>
@@ -51,6 +58,13 @@
 			<scope>runtime</scope>
 		</dependency>
 
+
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-devtools</artifactId>
+			<scope>runtime</scope>
+			<optional>true</optional>
+		</dependency>
 
 	</dependencies>
 
