--- a/screenmatch-frases/src/main/resources/application.properties
+++ b/screenmatch-frases/src/main/resources/application.properties
@@ -1,1 +1,15 @@
-spring.application.name=screenmatch-frases
+spring.datasource.url=jdbc:postgresql://localhost/screenmatch_frases
+spring.datasource.username=postgres
+spring.datasource.password=12345
+spring.datasource.driver-class-name=org.postgresql.Driver
+hibernate.dialect=org.hibernate.dialect.HSQLDialect
+
+spring.jpa.hibernate.ddl-auto=update
+
+spring.jpa.show-sql=true
+spring.jpa.format-sql=true
+
+/*
+
+server.port=8080
+*/
