Con persistencia Lista

--- a/literalura/src/main/resources/application.properties
+++ b/literalura/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=literalura
 
-spring.datasource.url=jdbc:postgresql://localhost/
+spring.datasource.url=jdbc:postgresql://localhost/literalura
 spring.datasource.username=postgres
 spring.datasource.password=12345
 spring.datasource.driver-class-name=org.postgresql.Driver
