--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -2,4 +2,4 @@ spring.application.name=api
 #spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
 spring.datasource.username=root
-spring.datasource.password=12345
+spring.datasource.password=12345678
