--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -3,3 +3,14 @@ spring.application.name=api
 spring.datasource.url=jdbc:mysql://localhost:3306/vollmed_api
 spring.datasource.username=root
 spring.datasource.password=12345678
+spring.jpa.show-sql=true
+spring.jpa.properties.hibernate.format_sql=true
+
+
+
+#spring.data.web.pageable.page-parameter=pagina
+#spring.data.web.pageable.size-parameter=tamano
+#spring.data.web.sort.sort-parameter=orden
+
+
+#http://localhost:8080/medicos?tamano=5&pagina=1&orden=email,desc
