--- a/api/pom.xml
+++ b/api/pom.xml
@@ -75,7 +75,15 @@
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
-
+		<dependency>
+			<groupId>org.springframework.boot</groupId>
+			<artifactId>spring-boot-starter-security</artifactId>
+		</dependency>
+		<dependency>
+			<groupId>com.bcgdv.jwt</groupId>
+			<artifactId>play-securityfilter</artifactId>
+			<version>1.0</version>
+		</dependency>
 
 	</dependencies>
 
