--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -6,6 +6,9 @@ spring.datasource.password=12345678
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+api.security.secret=${JWT_SECRET:12345678}
+
+server.error.include-stacktrace=never
 
 
 #spring.data.web.pageable.page-parameter=pagina
