--- a/api/pom.xml
+++ b/api/pom.xml
@@ -72,6 +72,12 @@
 		</dependency>
 
 		<dependency>
+			<groupId>com.auth0</groupId>
+			<artifactId>java-jwt</artifactId>
+			<version>4.2.0</version>
+		</dependency>
+
+		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-validation</artifactId>
 		</dependency>
@@ -84,6 +90,8 @@
 			<artifactId>play-securityfilter</artifactId>
 			<version>1.0</version>
 		</dependency>
+
+
 
 	</dependencies>
 
