--- a/api/src/main/resources/application.properties
+++ b/api/src/main/resources/application.properties
@@ -8,7 +8,7 @@ spring.jpa.properties.hibernate.format_sql=true
 
 api.security.secret=${JWT_SECRET:12345678}
 
-server.error.include-stacktrace=never
+#server.error.include-stacktrace=never
 
 
 #spring.data.web.pageable.page-parameter=pagina
